[project]
name = "ytt-mcp"
version = "0.1.0"
description = "MCP Server to extract transcript from a YouTube video"
readme = "README.md"
requires-python = ">=3.10" # Matches the mcp sdk
dependencies = [
    "mcp>=1.9.4",  # Just the core MCP SDK without [cli]
    "youtube-transcript-api>=1.1.0",
]

[dependency-groups]
dev = [
    "mcp[cli]>=1.9.4",  # CLI extras only for development
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-pretty>=1.3.0",
    "ruff>=0.11.13",
]